# flowerbot

./: .gitignore  db.sqlite3-shm  db.sqlite3-wal  pyproject.toml
flowerbot/: __init__.py  __main__.py  config.py  keyboards.py  rules.py
flowerbot/commands/: __init__.py  ai_helper.py  catalog.py  order.py  settings.py  start.py
flowerbot/database/: __init__.py  catalog.py  flower.py  user.py
flowerbot/middlewares/: __init__.py  context.py
flowerbot/prompts/: prompts.py
flowerbot/tools/: order.py
